--- a/src/web/styles/css/main.css
+++ b/src/web/styles/css/main.css
@@ -1,16 +1,41 @@
+#gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .canvas-container {
-  display: inline-block;
+  position: relative;
+  display: flex;
+  transition: 300ms ease all;
+  padding: 5px;
+  z-index: 1;
+}
+
+.selected {
+ z-index: 0;
 }
 
 canvas {
   cursor: move;
   border-radius: 4px;
   border-collapse: separate;
-  margin: 8px;
+}
+
+.dropZone {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+.tile {
+  position: relative;
 }
 
 body {
   font: 100% Montserrat, Trebuchet MS, Helvetica, sans-serif;
   color: #f44336;
   background-color: #f2f1f7;
+  margin: 10px;
 }
