--- a/src/web/styles/scss/_gallery.scss
+++ b/src/web/styles/scss/_gallery.scss
@@ -1,16 +1,36 @@
 @import "_colors";
 
 #gallery{
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .canvas-container{
-	display: inline-block;
+	position: relative;
+	display: flex;
+	transition: 300ms ease all;
+	padding: 5px;
+	z-index: 2;
 	
+}
+.selected {
+	visibility: hidden;
 }
 
 canvas{
 	cursor: move;
 	border-radius: 4px;
 	border-collapse: separate; 
-	margin: 8px;
+}
+
+.dropZone {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	left: 0;
+	top: 0;
+}
+
+.tile{
+	position: relative;
 }
