--- a/src/web/styles/css/main.css
+++ b/src/web/styles/css/main.css
@@ -6,7 +6,7 @@
 .canvas-container {
   position: relative;
   display: flex;
-  transition: 300ms ease all;
+  transition: 200ms linear;
   padding: 5px;
   z-index: 2;
 }
@@ -31,6 +31,8 @@ canvas {
 }
 
 .tile {
+  height: 165px;
+  width: 130px;
   position: relative;
 }
 
