--- a/src/web/styles/scss/_gallery.scss
+++ b/src/web/styles/scss/_gallery.scss
@@ -8,7 +8,7 @@
 .canvas-container{
 	position: relative;
 	display: flex;
-	transition: 300ms ease all;
+	transition: 200ms linear;
 	padding: 5px;
 	z-index: 2;
 	
@@ -33,5 +33,7 @@ canvas{
 }
 
 .tile{
+	height: 165px;
+	width: 130px;
 	position: relative;
 }
