--- a/src/web/styles/scss/main.scss
+++ b/src/web/styles/scss/main.scss
@@ -5,7 +5,7 @@
 $font-stack: Montserrat, Trebuchet MS, Helvetica, sans-serif;
 body {
 	font: 100% $font-stack;
-	color: $primary-red;
+	color: #000000;
 	background-color: $primary-light;
 	margin:10px;
 }
