--- a/src/web/styles/scss/_colors.scss
+++ b/src/web/styles/scss/_colors.scss
@@ -1,4 +1,5 @@
-$primary-light : #f2f1f7;
+$primary-light : #aeadb1;
 $secondary-light: #f8fafb;
 $primary-red: #f44336;
 $border-color: #e1e1e1;
+$primary-blue: #428dfd;
