--- a/src/web/styles/css/main.css
+++ b/src/web/styles/css/main.css
@@ -4,6 +4,7 @@
 }
 #gallery {
   display: flex;
+  height: 100%;
   flex-wrap: wrap;
 }
 
@@ -85,7 +86,7 @@ h1 {
   font-size: 16px;
 }
 
-.content-wrapper {
+#main {
   display: flex;
   height: 100%;
   box-sizing: border-box;
@@ -129,10 +130,6 @@ h1 {
   margin-top: 16px;
   font-size: 16px;
   color: #ffffff;
-}
-
-#save-button {
-  display: none;
 }
 
 .raised-button {
