change ui and add merge

--- a/src/web/styles/scss/main.scss
+++ b/src/web/styles/scss/main.scss
@@ -2,27 +2,36 @@
 @import "_colors";
 @import "_gallery";
 
-$font-stack:  "Montserrat";
-html, body {
+$font-stack: "Montserrat";
+
+html,
+body {
 	font-family: $font-stack;
 	color: #272727;
 	background-color: #f5f9fd;
 	height: 100%;
 	margin: 0px;
+	overflow: hidden;
 }
 
-p{
+p {
 	margin: 8px;
 	font-size: 18px;
 }
 
-h1{
+h1 {
 	margin: 8px;
 	font-size: 36px;
 	font-weight: 500;
 }
 
-.lined{
+h3 {
+	font-size: 24px;
+	font-weight: 400;
+	margin: 20px 0px;
+}
+
+.lined {
 	display: flex;
 	margin: 4px;
 	flex-direction: row;
@@ -30,15 +39,59 @@ h1{
 	color: #d2d5dc;
 }
 
-.lined:before , .lined::after{
+.lined:before,
+.lined::after {
 	content: "";
 	flex: 1 1;
 	border-bottom: 1px solid #d2d5dc;
 	margin: auto 12px auto 12px
 }
 
-.small{
+.small {
 	font-size: 16px;
+}
+
+.folder {
+	height: 100px;
+	width: 100px;
+	margin-top: 24px;
+}
+
+.icon {
+	fill: $primary-blue;
+}
+
+.action-icon {
+	height: 28px;
+	margin: 4px;
+	cursor:pointer;
+}
+
+.raised-button {
+	border: none;
+	border-radius: 4px;
+	padding: 8px;
+	background-color: $primary-blue;
+	box-shadow: 0 3px 1px -2px #0003, 0 2px 2px #00000024, 0 1px 5px #0000001f;
+	font-family: "Montserrat";
+	cursor: pointer;
+}
+
+.ripple {
+	background-position: center;
+	transition: background 0.5s;
+}
+
+.ripple:active {
+	background-color: #82baff;
+	background-size: 100%;
+	transition: background 0s;
+}
+
+.fab {
+	position: fixed;
+	right: 0;
+	margin: 32px 20px;
 }
 
 #main {
@@ -48,7 +101,7 @@ h1{
 	justify-content: center;
 	flex-direction: column;
 	max-width: 1100px;
-	margin-left:  auto;
+	margin-left: auto;
 	margin-right: auto;
 
 }
@@ -67,44 +120,61 @@ h1{
 	background-color: #ffffff;
 }
 
-
-.folder{
-	height : 100px;
-	width : 100px;
-	margin-top: 24px;
-}
-
-.icon {
-	fill : $primary-blue;
-}
-
-#file-input{
+#file-input {
 	visibility: hidden;
 }
 
-#browse{
+#browse {
 	width: 164px;
 	margin-top: 16px;
 	font-size: 16px;
 	color: #ffffff
 }
 
-.raised-button{
-	border: none;
-	border-radius: 4px;
-	padding: 8px;
-	background-color: $primary-blue;
-	box-shadow: 0 3px 1px -2px #0003, 0 2px 2px #00000024, 0 1px 5px #0000001f;
-	font-family: "Montserrat";
-	cursor:pointer;
+#editor {
+	display: flex;
+	flex-direction: column;
+	max-width: 876px;
+	height: 100%;
+	margin: auto;
+	padding: 8px 24px 24px 24px;
+	box-sizing: border-box;
 }
 
-.ripple {
-  background-position: center;
-  transition: background 0.5s;
+#menu {
+	height: 24px;
+	width: 24px;
 }
-.ripple:active {
-  background-color: #82baff;
-  background-size: 100%;
-  transition: background 0s;
+
+#action-bar {
+	position: sticky;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding-left: 12px;
+}
+
+#action-bar-icons {
+	display: flex;
+	margin: 4px;
+}
+
+/* Scrollbar styles */
+::-webkit-scrollbar {
+	width: 4px;
+	height: 12px;
+}
+
+::-webkit-scrollbar-track {
+	background: #f5f5f5;
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background: #ccc;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #999;
 }
