--- a/src/web/styles/css/main.css
+++ b/src/web/styles/css/main.css
@@ -3,57 +3,98 @@
   src: url(../../fonts/Montserrat/Montserrat-VariableFont_wght.ttf) format("truetype");
 }
 #gallery {
-  display: flex;
-  height: 100%;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 165px);
+  overflow-y: auto;
+  width: 100%;
+  max-width: 876px;
 }
 
 .content-container {
   position: relative;
+  z-index: 2;
   display: flex;
-  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
   margin: 5px;
   border-radius: 5px;
-  overflow: hidden;
-  transition: transform 200ms linear, z-index 100ms, visibility 100ms;
-  z-index: 2;
+  height: 100%;
+  box-sizing: border-box;
+  transition: transform 300ms linear, z-index 100ms, visibility 100ms;
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px rgba(0, 0, 0, 0.1411764706), 0 1px 3px rgba(0, 0, 0, 0.1215686275);
 }
 
-.selected {
+.dragged {
   z-index: 0;
   visibility: hidden;
 }
 
 canvas {
-  cursor: move;
+  border-radius: 5px;
+  pointer-events: none;
   border-collapse: separate;
+  width: fit-content;
+  height: fit-content;
 }
 
 .dropZone {
   position: absolute;
-  height: 100%;
-  width: 100%;
   left: 0;
   top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .tile {
-  height: 212px;
-  width: 165px;
-  display: flex;
   position: relative;
+  display: flex;
   flex-direction: column;
+  width: 165px;
+  height: 212px;
   align-items: center;
   justify-content: flex-end;
+  cursor: move;
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
-html, body {
+.actions {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  display: flex;
+  z-index: 3;
+}
+
+.tile .action-icon {
+  display: flex;
+  height: 16px;
+  margin: 0px;
+  cursor: pointer;
+}
+
+.tile .icon {
+  fill: #4a4a4a;
+}
+
+.tile .remove {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  background: #d7d7d7;
+}
+
+html,
+body {
   font-family: "Montserrat";
   color: #272727;
   background-color: #f5f9fd;
   height: 100%;
   margin: 0px;
+  overflow: hidden;
 }
 
 p {
@@ -67,6 +108,12 @@ h1 {
   font-weight: 500;
 }
 
+h3 {
+  font-size: 24px;
+  font-weight: 400;
+  margin: 20px 0px;
+}
+
 .lined {
   display: flex;
   margin: 4px;
@@ -75,7 +122,8 @@ h1 {
   color: #d2d5dc;
 }
 
-.lined:before, .lined::after {
+.lined:before,
+.lined::after {
   content: "";
   flex: 1 1;
   border-bottom: 1px solid #d2d5dc;
@@ -84,6 +132,49 @@ h1 {
 
 .small {
   font-size: 16px;
+}
+
+.folder {
+  height: 100px;
+  width: 100px;
+  margin-top: 24px;
+}
+
+.icon {
+  fill: #428dfd;
+}
+
+.action-icon {
+  height: 28px;
+  margin: 4px;
+  cursor: pointer;
+}
+
+.raised-button {
+  border: none;
+  border-radius: 4px;
+  padding: 8px;
+  background-color: #428dfd;
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px rgba(0, 0, 0, 0.1411764706), 0 1px 5px rgba(0, 0, 0, 0.1215686275);
+  font-family: "Montserrat";
+  cursor: pointer;
+}
+
+.ripple {
+  background-position: center;
+  transition: background 0.5s;
+}
+
+.ripple:active {
+  background-color: #82baff;
+  background-size: 100%;
+  transition: background 0s;
+}
+
+.fab {
+  position: fixed;
+  right: 0;
+  margin: 32px 20px;
 }
 
 #main {
@@ -111,16 +202,6 @@ h1 {
   background-color: #ffffff;
 }
 
-.folder {
-  height: 100px;
-  width: 100px;
-  margin-top: 24px;
-}
-
-.icon {
-  fill: #428dfd;
-}
-
 #file-input {
   visibility: hidden;
 }
@@ -132,23 +213,50 @@ h1 {
   color: #ffffff;
 }
 
-.raised-button {
-  border: none;
-  border-radius: 4px;
-  padding: 8px;
-  background-color: #428dfd;
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px rgba(0, 0, 0, 0.1411764706), 0 1px 5px rgba(0, 0, 0, 0.1215686275);
-  font-family: "Montserrat";
-  cursor: pointer;
+#editor {
+  display: flex;
+  flex-direction: column;
+  max-width: 876px;
+  height: 100%;
+  margin: auto;
+  padding: 8px 24px 24px 24px;
+  box-sizing: border-box;
 }
 
-.ripple {
-  background-position: center;
-  transition: background 0.5s;
+#menu {
+  height: 24px;
+  width: 24px;
 }
 
-.ripple:active {
-  background-color: #82baff;
-  background-size: 100%;
-  transition: background 0s;
+#action-bar {
+  position: sticky;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 12px;
+}
+
+#action-bar-icons {
+  display: flex;
+  margin: 4px;
+}
+
+/* Scrollbar styles */
+::-webkit-scrollbar {
+  width: 4px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f5f5f5;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #ccc;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #999;
 }
