--- a/src/web/styles/scss/_gallery.scss
+++ b/src/web/styles/scss/_gallery.scss
@@ -1,50 +1,86 @@
 @import "_colors";
 
-#gallery{
-	display: flex;
-	height: 100%;
-	flex-wrap: wrap;
+#gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 165px);
+  overflow-y: auto;
+  width: 100%;
+  max-width: 876px;
 }
 
-.content-container{
-	position: relative;
-	display: flex;
-	box-sizing: border-box;
-	margin: 5px;
+.content-container {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+  border-radius: 5px;
+  height: 100%;
+  box-sizing: border-box;
+  transition: transform 300ms linear, z-index 100ms, visibility 100ms;
+  box-shadow: 0 2px 1px -1px #0003, 0 1px 1px #00000024, 0 1px 3px #0000001f;
+}
+
+.dragged {
+  z-index: 0;
+  visibility: hidden;
+}
+
+canvas {
 	border-radius: 5px;
-	overflow: hidden;
-	transition: transform 200ms linear, z-index 100ms, visibility 100ms ;
-	z-index: 2;
-	box-shadow: 0 2px 1px -1px #0003, 0 1px 1px #00000024, 0 1px 3px #0000001f;
-}
-
-
-.selected {
-	z-index: 0;
-	visibility: hidden;
-}
-
-canvas{
-	cursor: move;
-
-	border-collapse: separate; 
+  pointer-events: none;
+  border-collapse: separate;
+  width: fit-content;
+  height: fit-content;
 }
 
 .dropZone {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	left: 0;
-	top: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.tile{
-	height: 212px;
-	width: 165px;
-	display: flex;
-	position: relative;
-	flex-direction: column;
-	align-items: center;
-	justify-content: flex-end;
+.tile {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 165px;
+  height: 212px;
+  align-items: center;
+  justify-content: flex-end;
+  cursor: move;
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
+.actions {
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  display: flex;
+  z-index: 3;
+}
+
+.tile .action-icon {
+  display: flex;
+  height: 16px;
+  margin: 0px;
+  cursor: pointer;
+}
+
+.tile .icon{
+  fill: #4a4a4a
+}
+
+.tile .remove {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+	width: 20px;
+	height: 20px;
+  background: #d7d7d7;
+}
